Change panel to fixed-layout on mobile

--- a/app/styles/components/_aside.scss
+++ b/app/styles/components/_aside.scss
@@ -18,17 +18,28 @@
 
 .Aside--left {
 	width: 100%;
-	width: calc(100% - 2rem);
 	height: 100%;
 	padding-top: 6rem; // space for our top bar
 	height: 100vh;
 	padding-left: 0.7rem; // same
 	padding-right: 1rem;
-	// padding-bottom: $bar-height * 1.25; // space for our bottom bar
-	// transition: transform 300ms $easing2;
-	// transform: translate3d(-100%, 0, 0);
-	display: none;
+
+	display: flex;
+
+	transition: transform 300ms $easing;
+	transform: translate3d(-100%, 0, 0);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 2;
+	background-color: $bg-color;
+	// width: calc(100% - 2rem);
+
 	@media (min-width: $layout-s) {
+		display: none;
+		transform: translate3d(0, 0, 0);
+		position: static;
 		width: $sidebar-width;
 		flex-basis: $sidebar-width;
 	}
